--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,12 @@ authors = ["Allan Crooks <allan@sixtyten.org>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-RtmAPI = "^0.7.2"
-httplib2 = "^0.20.4"
+httpx = "^0.23.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 pytest-recording = "^0.12.0"
+vcrpy = {git = "https://github.com/the-allanc/vcrpy.git", rev = "httpx-cassette-compatibility"}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
