--- a/tests/cassettes/test_transport/TestTransport.test_desktop_auth.yaml
+++ b/tests/cassettes/test_transport/TestTransport.test_desktop_auth.yaml
@@ -56,8 +56,8 @@ interactions:
     uri: https://api.rememberthemilk.com/services/rest/?api_key=c90238bdea098efa089dfa9bda082903&frob=85cfb0d6aece75f477f99c1afe4b8d006977244e&method=rtm.auth.getToken&v=2&api_sig=941207d12bfe35810caa97b6606ef2c8
   response:
     body:
-      string: <?xml version='1.0' encoding='UTF-8'?><rsp stat="ok"><auth><token>23d0cfec20adf80e0dddcf395032851085005318</token><perms>write</perms><user
-        id="7447825" username="milkymark" fullname="Milky Mark"/></auth></rsp>
+      string: <?xml version='1.0' encoding='UTF-8'?><rsp stat="ok"><auth><token>23d0cfec20adf80e0dddcf395032851085005318</token><perms>delete</perms><user
+        id="74478250" username="money.mark" fullname="Money Mark"/></auth></rsp>
     headers:
       CF-Cache-Status:
       - DYNAMIC
