--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ source = ["milky"]
 [tool.coverage.report]
 show_missing = true
 
+[tool.black]
+skip-string-normalization = true
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
