--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,3 +12,12 @@ repos:
     rev: "22.3.0"
     hooks:
     -   id: black
+
+    # Since yesqa only takes explicit file paths, it's easier to run it
+    # as a pre-commit hook then as a linting tool.
+-   repo: local
+    hooks:
+    -   id: yesqa
+        name: yesqa
+        entry: nox -R -e lint -- run-yesqa
+        language: system
