--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,10 +8,13 @@ repos:
     -   id: check-yaml
     -   id: file-contents-sorter
         files: .gitignore
--   repo: https://github.com/psf/black
-    rev: "22.3.0"
+-   repo: https://github.com/omnilib/ufmt
+    rev: v1.3.2
     hooks:
-    -   id: black
+    - id: ufmt
+      additional_dependencies:
+      - black == 22.3.0
+      - usort == 1.0.2
 
     # Since yesqa only takes explicit file paths, it's easier to run it
     # as a pre-commit hook then as a linting tool.
