Add safety and bandit checks.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ pylint = ["+*"]
 flake8-bugbear = ["+*"]
 flake8-warnings = ["+*"]
 dlint = ["+*"]
+flake8-bandit = ["+*"]
 flake8-pie = ["+*"]
 flake8-simplify = ["+*"]
 flake8-comprehensions = ["+*"]
