--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Allan Crooks <allan@sixtyten.org>"]
 
 [tool.poetry.dependencies]
-python = "~3.8"
+python = ">= 3.8"
 
 [tool.poetry.dev-dependencies]
 pytest = "*"
@@ -13,6 +13,8 @@ pytest-recording = "*"
 vcrpy = {git = "https://github.com/the-allanc/vcrpy.git", rev = "httpx-cassette-compatibility"}
 coverage = {extras = ["toml"], version = "*"}
 pytest-cov = "*"
+requests = "*"
+httpx = "*"
 defusedxml = "*"
 
 [tool.coverage.paths]
