--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Allan Crooks <allan@sixtyten.org>"]
 
 [tool.poetry.dependencies]
-python = ">= 3.8, < 4"
+python = ">= 3.8, < 3.11"
 
 [tool.poetry.dev-dependencies]
 pytest = "*"
@@ -35,6 +35,7 @@ flake8-typing-imports = "^1.12.0"
 flake8-pie = "^0.15.0"
 flake8-cognitive-complexity = "^0.1.0"
 yesqa = "^1.3.0"
+pytype = "^2022.6.23"
 
 [tool.coverage.paths]
 source = ["src"]
