--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,6 @@ flake8-noqa = "^1.2.5"
 flake8-annotations = "^2.9.0"
 flake8-future-annotations = "^0.0.5"
 flake8-type-checking = "^2.0.1"
-flake8-typing-imports = "^1.12.0"
 flake8-pie = "^0.15.0"
 flake8-cognitive-complexity = "^0.1.0"
 yesqa = "^1.3.0"
@@ -39,6 +38,9 @@ pytype = "^2022.6.23"
 typeguard = "^2.13.3"
 typing-extensions = "^4.2.0"
 flake8-docstrings = "^1.6.0"
+mkdocs = "^1.3.0"
+mkdocstrings = {extras = ["python"], version = "^0.19.0"}
+mkdocs-material = "^8.3.8"
 
 [tool.coverage.paths]
 source = ["src"]
@@ -74,7 +76,6 @@ flake8-noqa = ["+*"]
 flake8-annotations  = ["+*", "-ANN1*"]
 flake8-future-annotations = ["+*"]
 flake8-type-checking = ["+*"]
-flake8-typing-imports = ["+*"]
 
 [tool.flakeheaven.exceptions."tests/"]
 flake8-docstrings = ["-*"]
@@ -82,6 +83,10 @@ flake8-annotations = ["-*"]
 
 [tool.flakeheaven.exceptions."noxfile.py"]
 flake8-annotations =  ["-*"]
+
+[tool.flakeheaven.exceptions."src/milky/_docs.py"]
+flake8-annotations =  ["-*"]
+flake8-docstrings =  ["-*"]
 
 [tool.flakeheaven]
 format = "grouped"
