--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ pytype = { version = "^2022.6.23", python = ">=3.8,<3.11" }
 typeguard = "^2.13.3"
 typing-extensions = "^4.2.0"
 mkdocs = "^1.3.0"
-mkdocstrings = {extras = ["python"], version = "^0.19.0"}
+mkdocstrings = {extras = ["python"], version = "*"}
 mkdocs-material = "^8.3.8"
 
 [tool.poetry.group.dev.dependencies]
