--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ mkdocs-material = "^8.3.8"
 ruff = "^0.0.282"
 vcrpy = {git = "https://github.com/the-allanc/vcrpy.git", rev = "httpx-cassette-compatibility"}
 ipython = "8.12.1"
+ipdb = "^0.13.13"
 
 [tool.coverage.paths]
 source = ["src"]
