--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,7 @@ extend_select = ["B9"]
 docstring_convention = "google"
 
 [tool.mypy]
+strict_optional = false
 
 [[tool.mypy.overrides]]
 module = "defusedxml.etree"
@@ -75,7 +76,7 @@ ignore_missing_imports = true
 
 [tool.ruff]
 select = ["ALL"]
-ignore = ["Q", "COM", "EM101", "TRY003", "ANN101", "FBT", "D105", "A003", "ANN204", "D", "C408"]
+ignore = ["Q", "COM", "EM101", "TRY003", "ANN101", "FBT", "D105", "A003", "ANN204", "D", "C408", "I001"]
 target-version = "py38"
 
 [tool.ruff.per-file-ignores]
