--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,7 +75,7 @@ ignore_missing_imports = true
 
 [tool.ruff]
 select = ["ALL"]
-ignore = ["Q", "COM", "EM101", "TRY003", "ANN101", "FBT", "D105", "A003", "ANN204", "D", "C408", "I001"]
+ignore = ["Q", "COM", "EM101", "TRY003", "ANN101", "FBT", "D105", "A003", "ANN204", "ANN401", "D", "C408", "I001"]
 target-version = "py38"
 
 [tool.ruff.per-file-ignores]
