Removed pyflakes, but kept pylint.
Ruff seems to implement the pyflakes rules as described here:
https://flake8.pycqa.org/en/latest/user/error-codes.html#error-violation-codes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,8 +48,7 @@ show_missing = true
 skip-string-normalization = true
 
 [tool.flakeheaven.plugins]
-pyflakes = ["+*"]
-pylint = ["+*"]
+pylint = ["+*"] # https://github.com/astral-sh/ruff/issues/970
 flake8-warnings = ["+*"]
 dlint = ["+*"]
 flake8-use-fstring = ["+*"]
