--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,11 @@ repos:
       - black == 22.6.0
       - usort == 1.0.4
 -   repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.0.282
+    rev: v0.6.9
     hooks:
     -   id: ruff
         args: [ --fix, --exit-non-zero-on-fix ]
+-   repo: https://github.com/floatingpurr/sync_with_poetry
+    rev: "1.2.0"
+    hooks:
+    -   id: sync_with_poetry
