Add typecheck test for setting list names.

--- a/tests/typing/test_model_types.yaml
+++ b/tests/typing/test_model_types.yaml
@@ -2,15 +2,23 @@
   main: |
     from milky.root import Milky
     conn: Milky
-    reveal_type(conn.settings.pro)
-    reveal_type(conn.settings.timezone)
-    reveal_type(conn.settings.date_format)
-    reveal_type(conn.settings.default_due_date)
-  out: |
-    main:3: note: Revealed type is "builtins.bool"
-    main:4: note: Revealed type is "Union[builtins.str, None]"
-    main:5: note: Revealed type is "builtins.int"
-    main:6: note: Revealed type is "Union[builtins.str, None]"
+    reveal_type(conn.settings.pro) # N: Revealed type is "builtins.bool"
+    reveal_type(conn.settings.timezone) # N: Revealed type is "Union[builtins.str, None]"
+    reveal_type(conn.settings.date_format) # N: Revealed type is "builtins.int"
+    reveal_type(conn.settings.default_due_date) # N: Revealed type is "Union[builtins.str, None]"
+  env:
+    - PYTHONPATH=src/
+  mypy_config: |
+    disable_error_code = import-not-found,import-untyped
+
+- case: list_model
+  main: |
+    from milky.root import Milky
+    conn: Milky
+    l = conn.lists['blah']
+    reveal_type(l.name) # N: Revealed type is "builtins.str"
+    l.name = 20 # E: Incompatible types in assignment (expression has type "int", variable has type "str")  [assignment]
+    l.name = 'blah2'
   env:
     - PYTHONPATH=src/
   mypy_config: |
