--- a/tests/typing/test_model_types.yaml
+++ b/tests/typing/test_model_types.yaml
@@ -1,24 +1,19 @@
-- case: settings_model
+- case: model_check
+  parametrized:
+    - code: |
+        reveal_type(conn.settings.pro) # N: Revealed type is "builtins.bool"
+        reveal_type(conn.settings.timezone) # N: Revealed type is "Union[builtins.str, None]"
+        reveal_type(conn.settings.date_format) # N: Revealed type is "builtins.int"
+        reveal_type(conn.settings.default_due_date) # N: Revealed type is "Union[builtins.str, None]"
+    - code: |
+        l = conn.lists['blah']
+        reveal_type(l.name) # N: Revealed type is "builtins.str"
+        l.name = 20 # E: Incompatible types in assignment (expression has type "int", variable has type "str")  [assignment]
+        l.name = 'blah2'
   main: |
-    from milky.root import Milky
+    from milky import Milky
     conn: Milky
-    reveal_type(conn.settings.pro) # N: Revealed type is "builtins.bool"
-    reveal_type(conn.settings.timezone) # N: Revealed type is "Union[builtins.str, None]"
-    reveal_type(conn.settings.date_format) # N: Revealed type is "builtins.int"
-    reveal_type(conn.settings.default_due_date) # N: Revealed type is "Union[builtins.str, None]"
-  env:
-    - PYTHONPATH=src/
-  mypy_config: |
-    disable_error_code = import-not-found,import-untyped
-
-- case: list_model
-  main: |
-    from milky.root import Milky
-    conn: Milky
-    l = conn.lists['blah']
-    reveal_type(l.name) # N: Revealed type is "builtins.str"
-    l.name = 20 # E: Incompatible types in assignment (expression has type "int", variable has type "str")  [assignment]
-    l.name = 'blah2'
+    {{ code }}
   env:
     - PYTHONPATH=src/
   mypy_config: |
